# bulk_sync

./: .gitignore  README.md  pyproject.toml
bulk_sync/: __init__.py  bulk_synker.py  main.py
tests/: test_bulksynker.py  text2.csv  text3.csv
